@@ -375,19 +375,30 @@ std::string default_map_generator::generate_map(const std::vector<std::string>& 
 	std::string map;
 	// Keep a copy of labels as it can be written to by the map generator func
 	std::map<map_location,std::string> labels_copy;
+	std::string error_message;
 	int tries = 10;
 	do {
 		if (labels) {
 				labels_copy = *labels;
 		}
-		map = default_generate_map(width_, height_, island_size, island_off_center,
-			iterations, hill_size_, max_lakes, (nvillages_ * width_ * height_) / 1000,
-			castle_size_, nplayers_, link_castles_, labels, cfg_);
+		try{
+			map = default_generate_map(width_, height_, island_size, island_off_center,
+				iterations, hill_size_, max_lakes, (nvillages_ * width_ * height_) / 1000,
+				castle_size_, nplayers_, link_castles_, labels, cfg_);
+			error_message = "";
+		}
+		catch (mapgen_exception& exc){
+			error_message = exc.msg;
+		}
 		--tries;
 	} while (tries && map.empty());
 	if (labels) {
 		labels->swap(labels_copy);
 	}
+
+	if (error_message != "")
+		throw mapgen_exception(error_message);
+
 	return map;
 }
 
@@ -405,7 +416,13 @@ config default_map_generator::create_scenario(const std::vector<std::string>& ar
 
 	std::map<map_location,std::string> labels;
 	DBG_NG << "generating map...\n";
-	res["map_data"] = generate_map(args,&labels);
+	try{
+		res["map_data"] = generate_map(args,&labels);
+	}
+	catch (mapgen_exception exc){
+		res["map_data"] = "";
+		res["error_message"] = exc.msg;
+	}
 	DBG_NG << "done generating map..\n";
 
 	for(std::map<map_location,std::string>::const_iterator i =
